--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build examples
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
-            apt install libgtk-3-dev
+            sudo apt-get install -y libgtk-3-dev
           fi
           pio run -d ${{ matrix.example }}
         shell: bash
