--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -19,14 +19,20 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.9"
+      # On Linux, wxPython ("needed" for flash_writer.py)
+      # has a dependency on GTK+. Install it here.
+      # the tool just uses it to show a EULA dialog,
+      # so not critical, let's drop it later.. 
       - name: Install dependencies
-        run: |
-          pip install -U https://github.com/platformio/platformio/archive/develop.zip
-          pio pkg install --global --platform symlink://.
-      - name: Build examples
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
             sudo apt-get install -y libgtk-3-dev
+            pip install -U wheel
+            pip install -U wxPython
           fi
-          pio run -d ${{ matrix.example }}
+          pip install -U https://github.com/platformio/platformio/archive/develop.zip
+          pio pkg install --global --platform symlink://.
         shell: bash
+      - name: Build examples
+        run: |
+          pio run -d ${{ matrix.example }}
