--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -10,6 +10,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         example:
           - "examples/arduino-blink"
+          - "examples/arduino-gnss"
           - "examples/arduino-multiprocessing-message"
     runs-on: ${{ matrix.os }}
     steps:
